# Baja

./: .gitignore  DEPLOY.md  README.md
backend/: .env.example  Dockerfile  README.md  pyproject.toml
backend/app/: __init__.py  config.py  inference.py  main.py  schemas.py
backend/app/core/: auth.py  config.py  storage.py  supabase.py
backend/app/routers/: annotations.py  auth.py  datasets.py  images.py  inspect.py
backend/app/schemas/: __init__.py  annotation.py  auth.py  dataset.py  image.py  inspection.py
backend/models/: README.md
backend/tests/: test_auth.py  test_inference.py  test_main.py  test_storage.py
demo-kit/: README.md
docs/: 01-visao-geral.md  02-arquitetura.md  03-hardware-camara.md  04-modelo-ia.md  05-deploy-nuvem.md  06-roadmap.md  09-referencias.md
frontend/: .env.example  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: CameraFeed.tsx  DetectionOverlay.tsx  Logo.tsx  ResultsPanel.tsx  UploadPanel.tsx
frontend/app/lib/: api.ts
supabase/: README.md
supabase/migrations/: 0001_init.sql
training/: README.md  __init__.py  import_roboflow.py  import_roboflow_colab.md  lib.py  train_yolo.py  train_yolo_colab.md
